added a new test

--- a/Task1_Shnur.ipynb
+++ b/Task1_Shnur.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 97,
    "id": "e5927813-333e-443c-b719-3ac2cf091ab9",
    "metadata": {},
    "outputs": [],
@@ -128,12 +128,53 @@
     "        print('Test passed')\n",
     "    except Exception:\n",
     "        print('Test not passed')\n",
+    "\n",
+    "\n",
+    "def test4(func)->None:\n",
+    "    seq = [61, 39, 57, 28, 13, 82, 72, 59, 72, 49, 79, 51, 37, 29, 48, 51, 20, 97, 24, 25]\n",
+    "    res = func(seq)\n",
+    "    seq.sort(key=lambda x: x%5)\n",
+    "    try:\n",
+    "        assert check_seq(seq, res)\n",
+    "        print('Test passed')\n",
+    "    except Exception:\n",
+    "        print('Test not passed')\n",
+    "\n",
+    "\n",
+    "def test5(func)->None:\n",
+    "    seq = [151, 73, 152, 241, 213, 54, 173, 176, 167, 132, 293, 144, 79, 82, 250, 230, 249, \n",
+    "           119, 207, 213, 28, 83, 119, 252, 56, 138, 232, 70, 160, 205, 295, 263, 32, 239, \n",
+    "           96, 86, 218, 208, 195, 284, 262, 240, 30, 25, 159, 213, 111, 236, 294, 57, 250, \n",
+    "           138, 94, 234, 213, 141, 90, 196, 102, 233, 175, 280, 300, 299, 198, 158, 60, 154, \n",
+    "           63, 152, 161, 31, 162, 294, 27, 34, 132, 77, 24, 49, 97, 253, 293, 101, 89, 219, 228, \n",
+    "           168, 44, 101, 135, 56, 192, 147, 252, 223, 222, 138, 182, 35]\n",
+    "    \n",
+    "    res = func(seq)\n",
+    "    seq.sort(key=lambda x: x%5)\n",
+    "    try:\n",
+    "        assert check_seq(seq, res)\n",
+    "        print('Test passed')\n",
+    "    except Exception:\n",
+    "        print('Test not passed')\n",
+    "\n",
+    "\n",
+    "def test6(func)->None:\n",
+    "    seq = [2, 2, 2, 2, 5, 6, 7]\n",
+    "    \n",
+    "    res = func(seq)\n",
+    "    seq.sort(key=lambda x: x%5)\n",
+    "    print(res)\n",
+    "    try:\n",
+    "        assert check_seq(seq, res)\n",
+    "        print('Test passed')\n",
+    "    except Exception:\n",
+    "        print('Test not passed')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 98,
    "id": "63fc3564-9b66-4a6b-a72f-30c4ff43295c",
    "metadata": {},
    "outputs": [
@@ -143,6 +184,10 @@
      "text": [
       "Test passed\n",
       "Test passed\n",
+      "Test passed\n",
+      "Test passed\n",
+      "Test passed\n",
+      "[5, 6, 7, 2, 2, 2, 2]\n",
       "Test passed\n"
      ]
     }
@@ -150,31 +195,10 @@
    "source": [
     "test1(linear_sort)\n",
     "test2(linear_sort)\n",
-    "test3(linear_sort)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "id": "fe97d178-a58a-4e25-abaa-8bd39c6c2684",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[55, 11, 49, 63, 66, 56, 93, 67, 87, 10, 21, 23, 68, 76, 50, 45, 92, 33, 83, 49]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
-    "\n",
-    "arr = []\n",
-    "for i in range(0, 20):\n",
-    "    arr.append(random.randint(10, 100))\n",
-    "\n",
-    "print(arr)"
+    "test3(linear_sort)\n",
+    "test4(linear_sort)\n",
+    "test5(linear_sort)\n",
+    "test6(linear_sort)"
    ]
   },
   {
